writing code but still not working

--- a/starter-code/views/categories.ejs
+++ b/starter-code/views/categories.ejs
@@ -1,3 +1,9 @@
-  <body>
-    <h1>Categories</h1>
-  </body>
+<h1>Categories</h1>
+<!-- <pre> <%= JSON.stringify(response, 2, null) %> <pre> -->
+<ul>
+  <% response.forEach((joke) => { %>
+    <li>
+      <%= joke %>
+    </li>
+    })%>
+</ul>
